# rawpy

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  AGENTS.md  DEVELOP.md  LICENSE  MANIFEST.in  README.md  README.rst  WINDOWS_COMPILE  _rawpy.pyx  appveyor.yml  def_helper.h  dev-requirements.txt  genindex.html  index.html  mypy.ini  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  test_imageio_pattern.ini
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: classes.doctree  enums.doctree  exceptions.doctree  index.doctree  modules.doctree  namedtuples.doctree  rawpy.Params.doctree  rawpy.RawPy.doctree  rawpy.enhance.doctree
.github/scripts/: build-linux.sh  build-macos.sh  build-windows.bat  build-windows.ps1  check_sha256.sh  deploy-pypi.sh  install-miniconda.ps1  retry.sh  test-linux.sh  test-macos.sh  test-sdist-linux.sh  test-sdist-macos.sh  test-sdist-windows.ps1  test-windows.ps1
.github/workflows/: ci.yml  release.yml
_sources/api/: classes.rst.txt  enums.rst.txt  exceptions.rst.txt  index.rst.txt  modules.rst.txt  rawpy.RawPy.rst.txt  rawpy.enhance.rst.txt
_static/: documentation_options.js
api/: classes.html  enums.html  exceptions.html  index.html  modules.html  namedtuples.html  rawpy.Params.html  rawpy.RawPy.html  rawpy.enhance.html
appveyor/: .pypirc  install.ps1  pypi_deploy.ps1  run_with_env.cmd
docs/: Makefile  conf.py  index.rst  make.bat
docs/api/: enums.rst  exceptions.rst  index.rst  namedtuples.rst  rawpy.Params.rst  rawpy.RawPy.rst
examples/: bad_pixel_repair.py  basic_process.py  thumbnail_extract.py
glatzel/: build_local.ps1  init_build.ps1
logo/: generate.py  requirements.txt
rawpy/: __init__.py  __init__.pyi  _rawpy.pyi  _rawpy.pyx  _version.py  data_helper.h  def_helper.h  enhance.py
scripts/: agent_check.sh  build_dist.sh  dev_check.sh  rebuild.sh  setup_agent_env.sh  setup_dev_env.sh  setup_numpy.sh  setup_python.sh  test_dist.sh
test/: README.txt  basic_tests.py  stubtest_allowlist.txt  test_basic.py  test_examples.py  test_feature_flags.py  test_multiprocessing.py  test_mypy.py  test_shot_select.py  test_stubtest.py  test_type_imports.py  test_type_stubs.py  test_user_cblack.py  tests.py
travis/: build-sdist-and-docs.sh  build-wheels.sh  build.sh  build_linux.sh  build_macos.sh  deploy_pypi.sh  travis_retry.sh
